Table users {
  id integer [pk, increment]
  full_name text [not null]
  email text [unique, not null]
  phone text
  role text [not null] 
  created_at timestamp [default: 'now()']
  last_login timestamp
}

Table clients {
  id integer [pk, increment]
  full_name text [not null]
  initials text
  tier text [not null, default: 'silver']
  aum text [not null]
  aum_value double [not null]
  email text
  phone text
  whatsapp_number text
  last_contact_date timestamp
  risk_profile text [default: 'moderate']
  created_at timestamp [default: 'now()']
  assigned_to integer [ref: > users.id]
  last_transaction_date timestamp
  yearly_performance double
  alert_count integer [default: 0]

  date_of_birth timestamp
  marital_status text
  anniversary_date timestamp

  home_address text
  home_city text
  home_state text
  home_pincode text
  work_address text
  work_city text
  work_state text
  work_pincode text

  profession text
  sector_of_employment text
  designation text
  company_name text
  annual_income double
  work_experience integer

  kyc_date timestamp
  kyc_status text
  identity_proof_type text
  identity_proof_number text
  address_proof_type text
  pan_number text
  tax_residency_status text
  fatca_status text
  risk_assessment_score integer

  spouse_name text
  dependents_count integer
  children_details text
  nominee_details text
  family_financial_goals text

  investment_horizon text
  investment_objectives text
  preferred_products text
  source_of_wealth text

  preferred_contact_method text
  preferred_contact_time text
  communication_frequency text
  client_since timestamp
  client_acquisition_source text

  total_transaction_count integer
  average_transaction_value double
  recurring_investments text

  tax_planning_preferences text
  insurance_coverage text
  retirement_goals text
  major_life_events text
  financial_interests text
  net_worth text
  liquidity_requirements text
  foreign_investments text

  total_invested_amount double
  current_value double
  unrealized_gains double
  unrealized_gains_percent double
  one_year_return double
  three_year_return double
  five_year_return double
  portfolio_start_date date
  last_valuation_date date
  risk_score integer
  esg_score integer
  volatility double
  sharpe_ratio double
  asset_allocation json
  sector_exposure json
  geographic_exposure json
  is_favorite boolean [default: false]
}

Table prospects {
  id integer [pk, increment]
  full_name text [not null]
  email text
  phone text
  whatsapp_number text
  assigned_to integer [ref: > users.id]
  source text
  status text [default: 'new']
  created_at timestamp [default: 'now()']
  notes text
}

Table products {
  id integer [pk, increment]
  name text [not null]
  type text
  category text
  risk_level text
  launch_date date
  total_invested_amount double
  total_subscriptions double
  is_open_for_subscription boolean [default: true]
  tags text[]
  created_at timestamp [default: 'now()']
}

Table transactions {
  id integer [pk, increment]
  client_id integer [ref: > clients.id]
  product_id integer [ref: > products.id]
  transaction_type text
  amount double
  transaction_date timestamp
  created_at timestamp [default: 'now()']
}

Table performance_targets {
  id integer [pk, increment]
  user_id integer [ref: > users.id]
  client_id integer [ref: > clients.id]
  target_type text
  target_value double
  start_date date
  end_date date
  created_at timestamp [default: 'now()']
}

Table performance_actuals {
  id integer [pk, increment]
  user_id integer [ref: > users.id]
  client_id integer [ref: > clients.id]
  actual_value double
  date date
  created_at timestamp [default: 'now()']
}

Table alerts {
  id integer [pk, increment]
  client_id integer [ref: > clients.id]
  alert_type text
  message text
  is_read boolean [default: false]
  created_at timestamp [default: 'now()']
}

Table interactions {
  id integer [pk, increment]
  client_id integer [ref: > clients.id]
  user_id integer [ref: > users.id]
  interaction_type text
  notes text
  interaction_date timestamp
  created_at timestamp [default: 'now()']
}

Table communications {
  id integer [pk, increment]
  client_id integer [ref: > clients.id]
  user_id integer [ref: > users.id]
  channel text
  message text
  sent_at timestamp
}

Table reports {
  id integer [pk, increment]
  client_id integer [ref: > clients.id]
  report_type text
  report_data json
  generated_at timestamp [default: 'now()']
}

Table audit_logs {
  id integer [pk, increment]
  entity_type text
  entity_id integer
  action text
  user_id integer [ref: > users.id]
  timestamp timestamp [default: 'now()']
}

Table reminders {
  id integer [pk, increment]
  client_id integer [ref: > clients.id]
  user_id integer [ref: > users.id]
  reminder_text text
  due_date timestamp
  is_completed boolean [default: false]
  created_at timestamp [default: 'now()']
}
